# platform.core.security.privilege-info

./: CMakeLists.txt  privilege-info.pc.in
doc/: privilege-info_doc.h
packaging/: privilege-info.manifest  privilege-info.spec
src/: CMakeLists.txt  privilege_info.c
src/include/: privilege_information.h
test/: CMakeLists.txt  tc_privilege_info.c
