CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_VERBOSE_MAKEFILE OFF)

IF("${USE_AUTOSTART}" STREQUAL "1")
    ADD_DEFINITIONS("-DUSE_AUTOSTART")
ENDIF()

ADD_DEFINITIONS("-DCLIENT_IPC_THREAD")
ADD_DEFINITIONS("-DUSE_IPC_EPOLL")

STRING(REGEX MATCH "([^.]*)" API_VERSION "${VERSION}")
ADD_DEFINITIONS("-DAPI_VERSION=\"$(API_VERSION)\"")

CONFIGURE_FILE(privilege-info.pc.in privilege-info.pc @ONLY)

MESSAGE("build privilege-info")
ADD_SUBDIRECTORY(src)
MESSAGE("build tc-privilege-info")
ADD_SUBDIRECTORY(test)
